# xv6-rust

./: Cargo.toml  ProjectFinalReport.md  README.md  fs.img
.cargo/: config.toml
src/: lib.rs  main.rs  plic.rs  print.rs  rmain.rs  start.rs  trap.rs
src/console/: mod.rs  uart.rs
src/consts/: memlayout.rs  mod.rs  param.rs  vm.rs
src/memory/: addr.rs  kalloc.rs  mod.rs  pagetable.rs  vm.rs
src/proc/: context.rs  context.rs.bak  cpu.rs  mod.rs  proc.rs.bak  syscall.rs  trapframe.rs
src/proc.bak/: mod.rs  proc.rs
src/process/: proc.rs
src/register/: mod.rs  mstatus.rs  sip.rs  sstatus.rs  startup.rs
