[package]
name = "xv6-rust-project"
version = "0.1.0"
authors = ["BigBillZhao <11811715@mail.sustech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bit_field = "0.10.0"
bitflags = "1.2.1"
array-macro = "=2.0.0"
spin = "0.4.9"
# linked_list_allocator = "0.9.0"
